added JWT Token Generation and Authorization on CityController

--- a/Lection43/appsettings.json
+++ b/Lection43/appsettings.json
@@ -8,7 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLExpress;Database=Lection43;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Authentification": {
+    "SecretKeyFor": "thisissecretforgeneratingakey(mustbeatleast32bitlong)",
+    "Issuer": "localhost",
+    "Audiance" : "Lectin43"
   }
-
-
 }
